--- a/xo/xo.view.css
+++ b/xo/xo.view.css
@@ -3,11 +3,11 @@
 	
 }
 @media (orientation:portrait){
-	[examples_xo_field]  {	width:80vw; height:80vw;}
+	[examples_xo_fieldp]  {	width:80vw; height:80vw;}
 } @media (orientation:landscape){
-	[examples_xo_field]  {width:80vh; height:80vh;}
+	[examples_xo_fieldp]  {width:80vh; height:80vh;}
 }
-[examples_xo_field]  {
+[examples_xo_fieldp]  {
 
 	margin-left: auto;
 	margin-right: auto;
